# polymarket-cli

./: pyproject.toml
.github/workflows/: pypi.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: data.rs  events.rs  markets.rs  mod.rs
cli/src/output/: comments.rs  events.rs  markets.rs  mod.rs  series.rs  tags.rs
