[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "polymarket-cli"
dynamic = ["version"]
description = "CLI for Polymarket — browse markets, trade, and manage positions"
requires-python = ">=3.9"
license = "MIT"
keywords = ["polymarket", "prediction-markets", "trading", "cli", "sports-betting"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial",
]

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
